<resources>
    <string name="app_name">Story App</string>
    <string name="error_password">Password harus diisi minimal 6 karakter</string>
    <string name="error_email">Format email salah</string>
    <string name="error_mandatory_field">Wajib diisi</string>
    <string name="input_email">Masukkan Email</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="check_your_internet_connection">Check your internet connection!</string>
    <string name="something_wrong">Something wrong!</string>
    <string name="password" translatable="false">Password</string>
    <string name="email" translatable="false">Email</string>
    <string name="login">Login</string>
    <string name="register">Add New Account</string>
    <string name="or">Or</string>
    <string name="error_minimum_password">Password must be more than 6 characters</string>
    <string name="invalid_email">Invalid Email</string>
    <string name="must_be_filled">Must be Filled</string>
    <string name="filled_the_form">Filled the Form</string>
    <string name="name">Name</string>
    <string name="success_register">Successfully Registered</string>
    <string name="hai" translatable="false">Hai,</string>
    <string name="data_is_empty">Data is Empty</string>
    <string name="open_camera">Open Camera</string>
    <string name="open_gallery">Open Gallery</string>
    <string name="description">Description</string>
    <string name="add_new_story">Add New Story</string>
    <string name="success_add_new_story">Success Added New Story</string>
    <string name="not_getting_permission">Not getting permission</string>
    <string name="title_activity_register">RegisterActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="image_story">Image story</string>
    <string name="button_logout">Button Logout</string>
    <string name="button_add_new_story">Button Add New Story</string>
    <string name="logout">Logout</string>
    <string name="add_photo">Add photo</string>
    <string name="retry">Retry</string>
    <string name="view_on_google_maps">View on Google Maps</string>
</resources>