<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeActivity">

    <TextView
        android:id="@+id/tv_hai"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hai"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:textColor="@color/black"
        android:textSize="14sp"
        android:maxLines="1"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toEndOf="@+id/tv_hai"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@tools:sample/full_names" />

    <ImageButton
        android:id="@+id/btn_logout"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@color/white"
        android:src="@drawable/power_off"
        android:scaleType="fitXY"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/button_logout" />

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/grey_300"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/tv_hai" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fab_add_new_story"
        android:src="@android:drawable/ic_input_add"
        android:tint="@color/white"
        android:layout_margin="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/button_add_new_story" />

    <com.story.app.ui.custom.CustomButton
        android:id="@+id/btn_maps_view"
        android:text="@string/view_on_google_maps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableStart="@drawable/ic_baseline_location_on_24"
        android:drawablePadding="8dp"
        android:textAllCaps="false"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@+id/view2"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_story"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        tools:listitem="@layout/item_home"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_maps_view" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lf_empty"
        android:layout_width="160dp"
        android:layout_height="160dp"
        app:lottie_loop="true"
        app:lottie_autoPlay="true"
        app:lottie_rawRes="@raw/empty"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_is_empty"
        android:id="@+id/tv_empty"
        android:textSize="14sp"
        app:layout_constraintTop_toBottomOf="@+id/lf_empty"
        app:layout_constraintStart_toStartOf="@id/lf_empty"
        app:layout_constraintEnd_toEndOf="@id/lf_empty"/>

    <androidx.constraintlayout.widget.Group
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/group_empty"
        app:constraint_referenced_ids="lf_empty, tv_empty"
        android:visibility="gone"
        tools:visibility="visible"/>

    <include
        android:id="@+id/view_loading"
        layout="@layout/view_loading"
        android:elevation="8dp"
        android:visibility="gone" />

</androidx.constraintlayout.widget.ConstraintLayout>